# geometric-latent-biopsy

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: tests.yml
examples/: fit.py  minimal_usage.py  my_biomarker.pkl  score.py  test_prompts.json
scripts/: analyze_topology.py  download_datasets.py  evaluate_biomarker.py  plot_pc1_reference.py  plot_theta_phi_full.py  plot_theta_phi_plane.py  run_first_biopsy.py  run_model.py  stability_analysis.py
src/: __init__.py  extraction.py  theta.py
src/latentbiopsy/: __init__.py  cli.py  theta.py
tests/: conftest.py  test_cli.py  test_extraction.py  test_theta.py
